fixed the footer on IE

--- a/sites/all/themes/laporteLibrary/assets/less/layout.less
+++ b/sites/all/themes/laporteLibrary/assets/less/layout.less
@@ -17,6 +17,7 @@ body {
   line-height:1.5;
   margin:0px;
   padding:0px;
+  min-height:100%; 
   min-height:100vh;
   color:@colorDark;
   -webkit-animation: bugfix infinite 1s;
@@ -145,7 +146,7 @@ aside {
   margin:0 auto 4rem;
   width:@total-width;
   display:block;
-  flex:1;
+  flex:1 0 auto;
 }
 #mainContent{
   width:61rem;
